// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectModalItem component renders differently once it is the active row 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "transitionDuration": "0s",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-paddingLeft-1m04atk r-paddingRight-1pyaxff r-backgroundColor-u3tufj r-borderRadius-z2wwpe"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-paddingBlock-w7s2jr r-paddingLeft-m2pi6t"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-18c69zk r-justifyContent-1777fci"
          dir={null}
          style={
            Object {
              "backgroundColor": "rgba(255,0,0,1.00)",
              "height": "16px",
              "marginRight": "12px",
              "width": "16px",
            }
          }
        />
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-color-1q5n9ts"
          dir="auto"
          style={
            Object {
              "fontFamily": "Roboto-Medium",
              "fontSize": "16px",
              "letterSpacing": "0.16px",
              "lineHeight": "24px",
            }
          }
        >
          Fotuto
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectModalItem component should render correctly 1`] = `
<div
  className="css-view-g5y9jx"
  dir={null}
>
  <div
    className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73"
    dir={null}
    onClick={[Function]}
    onContextMenu={[Function]}
    onKeyDown={[Function]}
    style={
      Object {
        "transitionDuration": "0s",
      }
    }
    tabIndex="0"
  >
    <div
      className="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-paddingLeft-1m04atk r-paddingRight-1pyaxff"
      dir={null}
    >
      <div
        className="css-view-g5y9jx r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-paddingBlock-w7s2jr r-paddingLeft-m2pi6t"
        dir={null}
      >
        <div
          className="css-view-g5y9jx r-alignItems-1awozwy r-borderRadius-18c69zk r-justifyContent-1777fci"
          dir={null}
          style={
            Object {
              "backgroundColor": "rgba(255,0,0,1.00)",
              "height": "16px",
              "marginRight": "12px",
              "width": "16px",
            }
          }
        />
        <div
          className="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a r-color-jwli3a"
          dir="auto"
          style={
            Object {
              "fontFamily": "Roboto-Medium",
              "fontSize": "16px",
              "letterSpacing": "0.16px",
              "lineHeight": "24px",
            }
          }
        >
          Fotuto
        </div>
      </div>
    </div>
  </div>
</div>
`;
